# stark-terminal

./: .env.example  .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
docs/: ACTIVE_DECISION_ARCHITECTURE_TARGET.md  ANALYTICAL_TABLE_CONTRACTS.md  ANALYTICS_BOUNDARY_AUDIT.md  ANALYTICS_DEPENDENCY_AUDIT.md  ANALYTICS_DEPENDENCY_STAGING.md  ANALYTICS_MILESTONE_AUDIT.md  ANALYTICS_NEXT_PHASE_PLAN.md  ANALYTICS_NO_SIGNAL_AUDIT.md  ANALYTICS_REGIME_DEPENDENCY_AUDIT.md  ANALYTICS_REGIME_MILESTONE_AUDIT.md  ANALYTICS_REGIME_NO_SIGNAL_AUDIT.md  ANALYTICS_ROADMAP.md  ANALYTICS_SAFETY_POLICY.md  ANALYTICS_STACK.md  API_SURFACE_INVENTORY.md  ARCHITECTURE.md  AUDIT_LOG_JOURNAL_TARGET.md  BATCH_METADATA_POLICY.md  BETA_ANALYTICS_V0.md  CACHE_KEY_POLICY.md  CLICKHOUSE_WAREHOUSE_FOUNDATION.md  CONFIGURATION.md  CORRELATION_ANALYTICS_V0.md  CORRELATION_BETA_SAFETY_BOUNDARY.md  CORRELATION_BETA_VALIDATION_POLICY.md  DATABASE_FOUNDATION.md  DATA_FOUNDATION_AUDIT.md  DATA_FOUNDATION_MILESTONE_AUDIT.md  DATA_FOUNDATION_MILESTONE_NEXT_PHASE.md  DATA_FOUNDATION_NEXT_PHASE.md  DATA_PERSISTENCE_BOUNDARY.md  DATA_POLICY.md  DATA_QUALITY_FRAMEWORK.md  DATA_QUALITY_REPORT_SPEC.md  DECISIONOBJECT_EVIDENCE_BUNDLE_CONTRACTS.md  DECISION_API_DISPLAY_BOUNDARY_AUDIT.md  DECISION_API_DISPLAY_INTEGRATION_READINESS_AUDIT.md  DECISION_API_SKELETON_AUDIT.md  DECISION_APPROVAL_PLACEHOLDERS.md  DECISION_BLOCKED_OUTPUT_POLICY.md  (+501 more)
migrations/: README.md
scripts/: audit_foundation.py  build_retail_decision_console_internal_preview.py  verify_foundation.py  (+3 more)
(+917 files in other folders)
